--- a/lesson 3/index.html
+++ b/lesson 3/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="logo">Интернет-магазин</div>
-    <button class="btn-cart" type="button" onclick="viewCart()">Корзина<span id="cart"></span></button>
+    <button id="cart" class="btn-cart" type="button" onclick="viewCart()">Корзина<span id="cart"></span></button>
 </header>
 <main>
     <div class="products"></div>
