--- a/lesson4/task_1-2.html
+++ b/lesson4/task_1-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/task_1-2.css">
 </head>
 <body>
 <main>
@@ -27,12 +27,12 @@
             Two: 'I'll see you next time.'<br>
             One: 'Sure.' Bye.'</p>
     </article>
-  
+    <aside>
         <h3>Введите текст для преобразования</h3>
         <textarea class="regularexp" id="input"></textarea>
         <h3>Преобразованный текст</h3>
         <textarea class="regularexp-output" readonly id="output"></textarea>
-    
+    </aside>
    
 </main>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
