--- a/lesson4/task_1-2.html
+++ b/lesson4/task_1-2.html
@@ -36,6 +36,6 @@
    
 </main>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+<script src="js/task_1-2.js"></script>
 </body>
 </html>
